# llm-for-godot

extension/: Cargo.toml
extension/src/: lib.rs
rust/src/: lib.rs
sample-godot-project/: HelloWorld.gdextension  icon.svg.import  main.tscn  project.godot  vector_db.gd
