[package]
name = "rust" # Appears in the filename of the compiled dynamic library.
version = "0.1.0"     # You can leave version and edition as-is for now.
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rusqlite = "0.32.1"
serde = { version="1.0.210", features = ["derive"] }
serde_json = {version="1.0.132"}
sqlite-vec = "0.1.3"
ureq = {version = "2.10.1", features = ["json"]}
zerocopy = "0.8.6"
